plugins {
    id 'application'
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.dongkyeom'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    mainClass = 'com.dongkyeom.spark.streamer.SparkGpsProcessor'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes(
                'Main-Class': application.mainClass.get()
        )
    }
}

run {
    jvmArgs += [
            '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
    ]
}


dependencies {
    implementation("org.apache.spark:spark-sql_2.12:3.4.1")
    implementation("org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.1")
    implementation("org.apache.kafka:kafka-clients")
    runtimeOnly("org.apache.spark:spark-token-provider-kafka-0-10_2.12:3.4.1")
    implementation("org.apache.hbase:hbase-client:2.6.2") {
        exclude group: 'org.slf4j', module: 'slf4j-reload4j'
    }
    implementation("org.apache.hbase:hbase-common:2.6.2") {
        exclude group: 'org.slf4j', module: 'slf4j-reload4j'
    }
    implementation("org.apache.hadoop:hadoop-common:3.3.6")
}


tasks.named('shadowJar') {
    zip64 true
    mergeServiceFiles()
    archiveClassifier.set('all')
}